# CFnPitagora

SAM/: .env.example  Buildspec.yaml  Makefile  pyproject.toml  samconfig.toml  template.yaml
SAM/events/: get.json  post.json
SAM/src/: app.py  requirements.txt
