[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["S.Noda <horo1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
